# hockey_elo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_POLICY.md  LICENSE  Makefile  README.md  SECURITY.md  app.py  cli.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: README.md
scripts/maintenance/: debug_shl.py  fix.py  parse_test.py  replacer.py  sim_verify.py
scripts/manual/: test_fetch.py  test_nhl.py  test_nhl_ari.py  test_seasons.py  test_shl.py  test_shl_elo.py  test_shl_full.py  test_shl_playoff.py  test_standings.py
src/: __init__.py
src/core/: __init__.py  elo.py  league.py  models.py
src/leagues/: __init__.py
src/leagues/nhl/: __init__.py  constants.py  fetcher.py  league.py
src/leagues/shl/: __init__.py  constants.py  fetcher.py  league.py
src/tools/: __init__.py  analytics.py  simulator.py
tests/: test_cutoff_dates.py  test_elo_core.py  test_elo_trend_column.py  test_home_ice_estimator.py  test_shl_playoff_rules.py  test_simulator_mov.py
tests/integration/: test_network_smoke.py
