[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nhlelo"
version = "0.1.0"
description = "NHL/SHL Elo ratings, analytics, and playoff simulations."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "nhlelo contributors" }]
keywords = ["hockey", "elo", "nhl", "shl", "streamlit", "simulation"]
dependencies = [
  "streamlit>=1.30",
  "plotly>=5.18",
  "requests>=2.31",
  "pandas>=2.0",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
markers = [
  "network: tests that call external APIs",
]
